# repo

./: CMakeLists.txt  calcular_pi.c  detetar_contornos_gpu.c  get_idx_gray.c  gradiente_OX.c  gradiente_OY.c  hello_world.c  img_rgb2gray.c  main  main.c  multicore.c  multicorefor.c  normalizar.c  omphpc.c  omphpc.h  parallelCPU.c  reductionfor.c  rgb2gray.c  sequencial.c  sobel.c  sobel_gpu.c  sobel_multicore.c  sobelgu.c
